# Rust-Yew-Trunk-Threejs

./: Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
assets/: apple.ply  threejs-pointcloud-rotate.js  threejs-pointcloud-transform.js  threejs-pointcloud-zoom.js
src/: main.rs  threejs-pointcloud-rotate.js  threejs-pointcloud-zoom.js  threejs-pointcloud.js
