[package]
name = "threejs-project-test"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
log = "0.4.22"
web-sys = { version = "0.3.72", features = [
    "DataTransfer",
    "DragEvent",
    "File",
    "HtmlSelectElement",
    "HtmlFormElement",
] }

wasm-bindgen = "0.2"